# to_bytes

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs  utils.rs
derive/tests/: test.rs
src/: lib.rs  to_raw_bytes.rs  to_sized_array.rs  utils.rs
src/impls/: asis.rs  option.rs  primitive.rs
to_bytes/: Cargo.toml
to_bytes/src/: bytes.rs  specialization.rs  tests.rs
to_bytes/src/impls/: mod.rs
