[package]
name = "to_bytes_derive"
version = "0.1.0"
description = "Serialize values into memory bytes"
authors = ["MeowType", "Package <Aditrc@outlook.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/MeowType/to_bytes"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0" }

[dev-dependencies]
to_bytes = { path = "../to_bytes" }