[package]
name = "to_bytes"
version = "0.1.0"
description = "Serialize values into memory bytes"
authors = ["MeowType", "Package <Aditrc@outlook.com>"]
edition = "2018"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/MeowType/to_bytes"
keywords = ["to_bytes", "bytes", "memory", "serialize"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
to_bytes_derive = { version = "0.1", path = "../derive", optional = true }

[features]
default = ["derive"]
derive = ["to_bytes_derive"]